--- a/test/fixtures/leagues.yml
+++ b/test/fixtures/leagues.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  team: one
-  score: 1
+  name: MyString
 
 two:
-  team: two
-  score: 1
+  name: MyString
